# One-Billion-Row-Challenge-2025

./: .gitignore  README.md  README_BACKUP.md  criar_dataset_csv.py  criar_dataset_parquet.py  hello.sql  pyproject.toml
duckdb-airflow/dags/: process_duckdb.py
src/: README.md  usando_duckdb.py  usando_duckdb_parquet.py  usando_pandas.py  usando_polars.py  usando_pyspark.py  usando_pyspark_parquet.py
