[project]
name = "one-billion-row-challenge-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "efchemmer",email = "efchemmer@yahoo.com.br"}
]
readme = "README.md"
requires-python = "3.12.7"
dependencies = [
    "pyarrow (>=21.0.0,<22.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "polars (>=1.31.0,<2.0.0)",
    "pyspark (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
